--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -1016,8 +1016,8 @@
   "wallet.settings.walletPublicKeyShowInstruction": "To show wallet public key click \"Reveal\" button",
   "wallet.statusMessages.activeRestore": "The balance and transaction history of this wallet is {percentage}% synced with the blockchain.",
   "wallet.summary.no.transactions": "No recent transactions",
-  "wallet.summary.page.currency.isFetchingRate": "fetching",
-  "wallet.summary.page.currency.lastFetched": "fetched {fetchedTimeAgo}",
+  "wallet.summary.page.currency.isFetchingRate": "Fetching conversion rates",
+  "wallet.summary.page.currency.lastFetched": "converted {fetchedTimeAgo}",
   "wallet.summary.page.currency.title": "Converts as",
   "wallet.summary.page.pendingTransactionsLabel": "Number of pending transactions",
   "wallet.summary.page.showMoreTransactionsButtonLabel": "Show more transactions",
