--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -1016,8 +1016,8 @@
   "wallet.settings.walletPublicKeyShowInstruction": "ウォレット公開鍵を表示するには[表示]ボタンをクリックしてください",
   "wallet.statusMessages.activeRestore": "ウォレットの残高とトランザクション履歴はブロックチェーンと{percentage}%同期されました。",
   "wallet.summary.no.transactions": "最近のトランザクションはありません",
-  "wallet.summary.page.currency.isFetchingRate": "フェッチしています",
-  "wallet.summary.page.currency.lastFetched": "フェッチ：{fetchedTimeAgo}",
+  "wallet.summary.page.currency.isFetchingRate": "フェッチ時の換金レート",
+  "wallet.summary.page.currency.lastFetched": "換金済み：{fetchedTimeAgo}",
   "wallet.summary.page.currency.title": "換金通貨：",
   "wallet.summary.page.pendingTransactionsLabel": "処理中のトランザクション数",
   "wallet.summary.page.showMoreTransactionsButtonLabel": "もっと表示",
