[DDW-555] Copy and translation

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -295,9 +295,8 @@
   "settings.stakePools.smash.select.direct": "None - fetch the data directly",
   "settings.stakePools.smash.select.label": "Off-chain metadata server (SMASH)",
   "settings.stakePools.smashUrl.input.invalidUrl": "Invalid URL",
-  "settings.stakePools.smashUrl.input.invalidUrlPrefix": "The URL needs to start with \"https://\"",
-  "settings.stakePools.smashUrl.input.invalidUrlParameter": "The URL cannot have a parameter",
-  "settings.stakePools.smashUrl.input.invalidUrlQuerystring": "The URL cannot have a querystring",
+  "settings.stakePools.smashUrl.input.invalidUrlParameter": "Only \"https://\" protocol and hostname (e.g. domain.com) are allowed",
+  "settings.stakePools.smashUrl.input.invalidUrlPrefix": "The URL should start with \"https://\"",
   "settings.stakePools.smashUrl.input.label": "SMASH server URL",
   "settings.stakePools.smashUrl.input.placeholder": "Enter custom server URL",
   "settings.support.faq.content": "If you are experiencing a problem, please look for guidance using the list of {faqLink} on the support pages. If you can’t find a solution, please submit a support ticket.",
