--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -764,6 +764,7 @@
   "wallet.hardware.deviceStatus.trezor_bridge_failure.link.url": "https://wallet.trezor.io/#/bridge",
   "wallet.hardware.deviceStatus.unsupported_device": "The device is not supported!",
   "wallet.hardware.deviceStatus.verifying_address": "Verify address on your \"{walletName}\" device",
+  "wallet.hardware.deviceStatus.verifying_address_aborted": "Verification was aborted by the user",
   "wallet.hardware.deviceStatus.verifying_address_failed": "Address verification failed",
   "wallet.hardware.deviceStatus.verifying_address_succeeded": "Address verified",
   "wallet.hardware.deviceStatus.verifying_transaction": "Confirm the transaction using the \"{walletName}\" device",
@@ -800,14 +801,25 @@
   "wallet.notResponding.submitSupportRequestLabel": "Submit a support request",
   "wallet.notResponding.submitSupportRequestUrl": "https://iohk.zendesk.com/hc/en-us/requests/new/",
   "wallet.notResponding.title": "The wallet is not responding.",
+  "wallet.receive.dialog.addressVerificationInstructions": "Please compare the address displayed here on the screen with the address displayed on the Ledger device by comparing <b>at least the first 5 characters at the start</b> of the address after the \"addr\" part and <b>at least 5 characters at the end</b> of the address.",
+  "wallet.receive.dialog.confirmationCheckLabel": "You have verified the address",
   "wallet.receive.dialog.copyAddressLabel": "Copy address",
   "wallet.receive.dialog.dialogTitle": "Share wallet address",
   "wallet.receive.dialog.downloadPDFButton": "Save as PDF",
   "wallet.receive.dialog.inputLabel": "Note for the PDF",
   "wallet.receive.dialog.inputPlaceholder": "Add an optional note to be printed on the PDF document",
+  "wallet.receive.dialog.invalidAddressConfirmationLabel": "Yes, I am sure I have compared the address displayed in Daedalus with the address displayed on the Ledger device by comparing the beginning and ending of the address.",
+  "wallet.receive.dialog.invalidAddressWarningDescription": "You have manually compared the address shown in Daedalus with the address shown on the hardware wallet device and reported that they are different. If this is the case, please contact support and make sure you download and attach logs.",
+  "wallet.receive.dialog.invalidAddressWarningTitle": "Warning, your copy of Daedalus may be hacked!",
   "wallet.receive.dialog.saveQRCodeImage": "Save QR code image",
+  "wallet.receive.dialog.softwareCheckLabel": "Daedalus verified the address",
   "wallet.receive.dialog.spendingPathTooltip": "Receiving address path",
   "wallet.receive.dialog.stakingPathTooltip": "Rewards address path",
+  "wallet.receive.dialog.supportRequestButtonLabel": "Submit a request to IOHK Support",
+  "wallet.receive.dialog.verificationCheckOptionInvalid": "No, I am sure that address displayed in Daedalus is different from the address displayed on my Ledger device",
+  "wallet.receive.dialog.verificationCheckOptionReverify": "No, reverify",
+  "wallet.receive.dialog.verificationCheckOptionValid": "Yes",
+  "wallet.receive.dialog.verificationCheckOptionsLabel": "Is the address you have verified correct?",
   "wallet.receive.page.addresses.addressesTitle": "Receiving addresses",
   "wallet.receive.page.copyAddressLabel": "Copy address",
   "wallet.receive.page.generateNewAddressButtonLabel": "Generate a new address",
