[DDW-149] Update wallet sync status checking on wallet settings screen

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -10280,8 +10280,8 @@
         }
       },
       {
-        "defaultMessage": "!!!Deposit",
-        "description": "Deposit label in the \"Undelegate wallet\" dialog.",
+        "defaultMessage": "!!!Deposits reclaimed",
+        "description": "Deposits reclaimed label in the \"Undelegate wallet\" dialog.",
         "end": {
           "column": 3,
           "line": 80
