--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -766,7 +766,8 @@
   "wallet.hardware.deviceStatus.trezor_bridge_failure.link.url": "https://wallet.trezor.io/#/bridge",
   "wallet.hardware.deviceStatus.unsupported_device": "このデバイスはサポートされていません",
   "wallet.hardware.deviceStatus.verifying_address": "「{walletName}」デバイスのアドレスを検証してください",
-  "wallet.hardware.deviceStatus.verifying_address_aborted": "!!!Verification was aborted by the user",
+  "wallet.hardware.deviceStatus.verifying_address_aborted": "検証はユーザーにより中止されました",
+  "wallet.hardware.deviceStatus.verifying_address_confirmation": "!!!Please answer the question below",
   "wallet.hardware.deviceStatus.verifying_address_failed": "アドレスが検証できません",
   "wallet.hardware.deviceStatus.verifying_address_succeeded": "アドレスが検証されました",
   "wallet.hardware.deviceStatus.verifying_transaction": "「{walletName}」デバイスを使ってトランザクションを確認してください",
@@ -803,25 +804,25 @@
   "wallet.notResponding.submitSupportRequestLabel": "サポートリクエストを送信する",
   "wallet.notResponding.submitSupportRequestUrl": "https://iohk.zendesk.com/hc/ja/requests/new/",
   "wallet.notResponding.title": "ウォレットは応答していません",
-  "wallet.receive.dialog.addressVerificationInstructions": "!!!Please compare the address displayed here on the screen with the address displayed on the Ledger device by comparing <b>at least the first 5 characters at the start</b> of the address after the \"addr\" part and <b>at least 5 characters at the end</b> of the address.",
-  "wallet.receive.dialog.confirmationCheckLabel": "!!!You have verified the address",
+  "wallet.receive.dialog.addressVerificationInstructions": "この画面に表示されたアドレスとLedgerデバイスに表示されたアドレスの「addr」に続く<b>最初の5文字以上</b>と、<b>最後の5文字以上</b>を比べてください。",
+  "wallet.receive.dialog.confirmationCheckLabel": "自分でアドレスを検証した",
   "wallet.receive.dialog.copyAddressLabel": "アドレスをコピーする",
   "wallet.receive.dialog.dialogTitle": "ウォレットアドレスを共有する",
   "wallet.receive.dialog.downloadPDFButton": "PDF形式で保存する",
   "wallet.receive.dialog.inputLabel": "PDF用メモ",
   "wallet.receive.dialog.inputPlaceholder": "PDF文書上に表示するメモを追加できます",
-  "wallet.receive.dialog.invalidAddressConfirmationLabel": "!!!Yes, I am sure I have compared the address displayed in Daedalus with the address displayed on the Ledger device by comparing the beginning and ending of the address.",
-  "wallet.receive.dialog.invalidAddressWarningDescription": "!!!You have manually compared the address shown in Daedalus with the address shown on the hardware wallet device and reported that they are different. If this is the case, please contact support and make sure you download and attach logs.",
-  "wallet.receive.dialog.invalidAddressWarningTitle": "!!!Warning, your copy of Daedalus may be hacked!",
+  "wallet.receive.dialog.invalidAddressConfirmationLabel": "はい、Daedalusに表示されたアドレスと、Ledgerデバイスに表示されたアドレスの最初と最後の部分を比べて確かめました。",
+  "wallet.receive.dialog.invalidAddressWarningDescription": "Daedalusに表示されたアドレスとハードウェアウォレットデバイスに表示されたアドレスを手動で比較して異なっていると回答しました。この場合は、サポートに連絡してください。その際、必ずログをダウンロードして添付してください。",
+  "wallet.receive.dialog.invalidAddressWarningTitle": "警告：あなたのDaedalusはハッキングされているかもしれません",
   "wallet.receive.dialog.saveQRCodeImage": "QRコードの画像を保存する",
-  "wallet.receive.dialog.softwareCheckLabel": "!!!Daedalus verified the address",
+  "wallet.receive.dialog.softwareCheckLabel": "Daedalusはアドレスを検証した",
   "wallet.receive.dialog.spendingPathTooltip": "入金先アドレスのパス",
   "wallet.receive.dialog.stakingPathTooltip": "報酬アドレスのパス",
-  "wallet.receive.dialog.supportRequestButtonLabel": "!!!Submit a request to IOHK Support",
-  "wallet.receive.dialog.verificationCheckOptionInvalid": "!!!No, I am sure that address displayed in Daedalus is different from the address displayed on my Ledger device",
-  "wallet.receive.dialog.verificationCheckOptionReverify": "!!!No, reverify",
-  "wallet.receive.dialog.verificationCheckOptionValid": "!!!Yes",
-  "wallet.receive.dialog.verificationCheckOptionsLabel": "!!!Is the address you have verified correct?",
+  "wallet.receive.dialog.supportRequestButtonLabel": "IOHKサポートにリクエストを送信する",
+  "wallet.receive.dialog.verificationCheckOptionInvalid": "いいえ、Daedalusに表示されたアドレスは、Ledgerデバイスに表示されたアドレスと異なります",
+  "wallet.receive.dialog.verificationCheckOptionReverify": "いいえ、もう一度検証します",
+  "wallet.receive.dialog.verificationCheckOptionValid": "はい",
+  "wallet.receive.dialog.verificationCheckOptionsLabel": "検証したアドレスは正しいアドレスですか",
   "wallet.receive.page.addresses.addressesTitle": "入金先アドレス",
   "wallet.receive.page.copyAddressLabel": "アドレスをコピーする",
   "wallet.receive.page.generateNewAddressButtonLabel": "新しいアドレスを生成する",
