--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -195,6 +195,7 @@
   "noDiskSpace.error.overlayContent": "<b>Daedalus requires at least {diskSpaceRequired} of hard drive space to operate. Your computer is missing {diskSpaceMissing} of available space. Please delete some files to increase available hard drive space to continue using Daedalus. </b><br /><br />It is recommended to have at least 15% of hard drive space available ({diskSpaceRecommended} in your case) for normal and stable operation of the operating system and installed programs. We strongly recommend that you free up at least that amount of space from your hard drive.",
   "noDiskSpace.error.overlayTitle": "Daedalus requires more hard drive space",
   "notification.copyAddress": "Address: <strong>{address}</strong> copied to clipboard",
+  "notification.copyAssetItem": "{assetItem}: <strong>{value}</strong> copied to clipboard",
   "notification.copyPublicKey": "Public key: <strong>{publicKey}</strong> copied to clipboard",
   "notification.copyStateDirectoryPath": "Daedalus state directory copied to clipboard",
   "notification.downloadAddressPDFSuccess": "Address: <strong>{walletAddress}</strong> PDF successfully downloaded",
@@ -1130,5 +1131,11 @@
   "wallet.transferFunds.dialog2.passphraseLabel": "Spending password",
   "wallet.transferFunds.dialog2.sourceWalletAmount.label": "{sourceWalletName} amount",
   "wallet.transferFunds.dialog2.title": "Transfer funds",
-  "wallet.transferFunds.dialog2.total.label": "Total"
+  "wallet.transferFunds.dialog2.total.label": "Total",
+  "widgets.assetToken.item.fingerprint": "Fingerprint",
+  "widgets.assetToken.item.policyId": "Policy Id",
+  "widgets.assetToken.item.assetName": "Asset Name",
+  "widgets.assetToken.item.name": "Name",
+  "widgets.assetToken.item.acronym": "Acronym",
+  "widgets.assetToken.item.description": "Description"
 }
